fix: line break added for words too long in accordions

--- a/frontend/css/components.css
+++ b/frontend/css/components.css
@@ -435,6 +435,8 @@
     display: flex;
     justify-content: space-between;
     gap: 24px;
+    hyphens: auto;
+    word-break: break-word;
 
     &::-webkit-details-marker {
       display: none;
